karl package Changelog
======================

Unreleased
----------

- Fixed content feeds to work with an instance not rooted at '/'.

3.47 (2010-10-07)
-----------------

- gave profile body a set width, so it doesn't fall out of its
  area in IE (LP #638326)

- put in correct version if corners.png, so IE will display the
  background on feed actions (LP #629013)

- removed IE calendar styles, that were actually breaking things
  (LP #629026)

- Removed Karl's implementation of Message in favor of the implementation in
  repoze.postoffice.

- Added a UI for deleting and requeueing messages in the postoffice quarantine.
  (LP #613424)

- Removed unused formfield snippet from formfields.pt: add_comment-field.

- Added evolve script to remove duplicate tags. (LP #627065)

- Make sure top level validation error message shows on edit profile forms.
  (LP #645614)

- Make sure sequence fields can be highlighted when there are validation
  errors.  Formish logically but not helpfully sets the 'contains-error' style
  instead of the 'error' style we were using in our css.  Copied the .error
  styles for .contains-error. (LP #645614)

- Implemented workaround to what should probably be considered a bug in
  formish, to allow formish error messages to be visible for the websites field
  when editing a profile. (LP #645614)

- Added a UI for rename and merging users in the Admin UI.  (LP #629625)

3.46 (2010-09-10)
-----------------

- fixed community filter buttons for Safari (LP #629010)

- fixed up styles on profile page to make all browsers happy
  (LP #634110)

- Slightly reduced content area width to avoid content shifting
  while browser zooming (LP #629577)

- Fix 'delete_resource.html' view for content outside of communities
  (e.g., profile photos). (LP #634139)

- Derive ``creator`` for uploaded photo from the current user, rather than
  the container's name. (LP #633191)

- Improve contentfeeds description of content added / modified inside a